// Deepen Database Schema for dbdiagram.io
// Paste this content at https://dbdiagram.io/d

// ============================================
// USER MANAGEMENT
// ============================================

Table users {
  id bigserial [pk]
  email varchar(255) [unique, not null]
  password varchar(255) [not null]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  phone_number varchar(20)
  role varchar(20) [not null, note: 'PATIENT, FAMILY_MEMBER, DOCTOR, NURSE']
  is_active boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table patient_profiles {
  id bigserial [pk]
  user_id bigint [ref: > users.id, unique, not null]
  date_of_birth date
  address text
  emergency_contact_name varchar(200)
  emergency_contact_phone varchar(20)
  medical_notes text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table staff_profiles {
  id bigserial [pk]
  user_id bigint [ref: > users.id, unique, not null]
  department varchar(100)
  specialization varchar(200)
  license_number varchar(50)
  work_schedule jsonb
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// ============================================
// FAMILY RELATIONSHIPS
// ============================================

Table family_relationships {
  id bigserial [pk]
  patient_id bigint [ref: > users.id, not null]
  family_member_id bigint [ref: > users.id, not null]
  relationship_type varchar(50) [note: 'SPOUSE, CHILD, PARENT, SIBLING, OTHER']
  is_primary_contact boolean [default: false]
  can_view_appointments boolean [default: true]
  can_view_visit_summaries boolean [default: true]
  can_view_care_tasks boolean [default: true]
  can_receive_notifications boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    (patient_id, family_member_id) [unique]
  }
}

// ============================================
// APPOINTMENTS
// ============================================

Table appointments {
  id bigserial [pk]
  patient_id bigint [ref: > users.id, not null]
  staff_id bigint [ref: > users.id, not null]
  appointment_type varchar(50) [not null, note: 'HOME_VISIT, CLINIC, VIDEO_CALL, PHONE_CALL']
  status varchar(30) [default: 'SCHEDULED', note: 'SCHEDULED, CONFIRMED, IN_PROGRESS, COMPLETED, CANCELLED, RESCHEDULED']
  scheduled_date date [not null]
  scheduled_time time [not null]
  duration_minutes int [default: 30]
  location text
  notes text
  cancellation_reason text
  created_by bigint [ref: > users.id]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table appointment_change_requests {
  id bigserial [pk]
  appointment_id bigint [ref: > appointments.id, not null]
  requested_by bigint [ref: > users.id, not null]
  request_type varchar(30) [not null, note: 'RESCHEDULE, CANCEL']
  proposed_date date
  proposed_time time
  reason text
  status varchar(20) [default: 'PENDING', note: 'PENDING, APPROVED, REJECTED']
  reviewed_by bigint [ref: > users.id]
  reviewed_at timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// ============================================
// VISIT SUMMARIES
// ============================================

Table visit_summaries {
  id bigserial [pk]
  appointment_id bigint [ref: > appointments.id, unique, not null]
  summary text [not null]
  observations text
  recommendations text
  medications_prescribed text
  follow_up_required boolean [default: false]
  follow_up_notes text
  vital_signs jsonb
  created_by bigint [ref: > users.id, not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// ============================================
// CARE TASKS
// ============================================

Table care_tasks {
  id bigserial [pk]
  patient_id bigint [ref: > users.id, not null]
  title varchar(255) [not null]
  description text
  category varchar(50) [note: 'MEDICATION, EXERCISE, DIET, MONITORING, OTHER']
  priority varchar(20) [default: 'MEDIUM', note: 'LOW, MEDIUM, HIGH, URGENT']
  status varchar(20) [default: 'PENDING', note: 'PENDING, IN_PROGRESS, COMPLETED, SKIPPED']
  due_date date
  due_time time
  frequency varchar(30) [note: 'ONCE, DAILY, WEEKLY, MONTHLY']
  recurrence_end_date date
  assigned_by bigint [ref: > users.id]
  completed_at timestamp
  completed_by bigint [ref: > users.id]
  notes text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table task_completions {
  id bigserial [pk]
  task_id bigint [ref: > care_tasks.id, not null]
  completed_by bigint [ref: > users.id, not null]
  completed_at timestamp [default: `CURRENT_TIMESTAMP`]
  notes text
  skipped boolean [default: false]
  skip_reason text
}

// ============================================
// MESSAGING
// ============================================

Table conversations {
  id bigserial [pk]
  appointment_id bigint [ref: > appointments.id]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table conversation_participants {
  id bigserial [pk]
  conversation_id bigint [ref: > conversations.id, not null]
  user_id bigint [ref: > users.id, not null]
  joined_at timestamp [default: `CURRENT_TIMESTAMP`]
  last_read_at timestamp

  indexes {
    (conversation_id, user_id) [unique]
  }
}

Table messages {
  id bigserial [pk]
  conversation_id bigint [ref: > conversations.id, not null]
  sender_id bigint [ref: > users.id, not null]
  content text [not null]
  message_type varchar(20) [default: 'TEXT', note: 'TEXT, IMAGE, FILE, SYSTEM']
  is_read boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// ============================================
// NOTIFICATIONS
// ============================================

Table notifications {
  id bigserial [pk]
  user_id bigint [ref: > users.id, not null]
  title varchar(255) [not null]
  message text [not null]
  type varchar(50) [note: 'APPOINTMENT_REMINDER, TASK_DUE, MESSAGE, VISIT_SUMMARY, SYSTEM']
  reference_type varchar(50)
  reference_id bigint
  is_read boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// ============================================
// SCHEDULING (Hospital Staff)
// ============================================

Table staff_availability {
  id bigserial [pk]
  staff_id bigint [ref: > users.id, not null]
  day_of_week int [not null, note: '0=Sunday, 6=Saturday']
  start_time time [not null]
  end_time time [not null]
  is_available boolean [default: true]
  effective_from date
  effective_until date
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table staff_time_off {
  id bigserial [pk]
  staff_id bigint [ref: > users.id, not null]
  start_date date [not null]
  end_date date [not null]
  reason varchar(255)
  status varchar(20) [default: 'PENDING', note: 'PENDING, APPROVED, REJECTED']
  approved_by bigint [ref: > users.id]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}
